fix : fix buttons alignments

--- a/styles/createGamePage-styles.css
+++ b/styles/createGamePage-styles.css
@@ -69,4 +69,6 @@
   font-size: 30px;
   margin-left: 10px;
   margin-right: 10px;
+  width: 32px;
+  text-align: center;
 }
